--- a/index.html
+++ b/index.html
@@ -2,26 +2,33 @@
 
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Oswald:wght@200..700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <header id="header"></header>
+    <div id="main">
+        <h1>Pasta La Vista, Baby!</h1>
+        <header id="header"></header>
 
-    <div id="container">
-        <!-- <div id="header"></div> -->
-        <div id="menu"></div>
-        <h3 id="titleOrder">Your order</h3>
+        <div id="container">
+            <!-- <div id="header"></div> -->
+            <div id="menu"></div>
+            <h3 id="titleOrder">Your order</h3>
 
-        <div id="yourOrder"> </div>
+            <div id="yourOrder"> </div>
 
 
-        <div>
-            <hr>
-            <h5 id="totalPrice">Total price</h5>
-            <button id="btn-complete-order">Complete Order</button>
+            <div>
+                <hr>
+                <h5 id="totalPrice">Total price</h5>
+                <button id="btn-complete-order">Complete Order</button>
+            </div>
+
         </div>
-
     </div>
     <form id="form">
         <input type="text" name="fullName" placeholder="Enter your name" id="fullName" required>
